@@ -26,22 +26,13 @@ package com.github.al.realworld.application.query;
 import com.github.al.realworld.api.dto.ArticleDto;
 import com.github.al.realworld.api.query.GetFeed;
 import com.github.al.realworld.api.query.GetFeedResult;
-import com.github.al.realworld.application.ArticleAssembler;
 import com.github.al.realworld.bus.QueryHandler;
-import com.github.al.realworld.domain.model.Article;
-import com.github.al.realworld.domain.model.FollowRelation;
-import com.github.al.realworld.domain.model.User;
 import com.github.al.realworld.domain.repository.ArticleRepository;
-import com.github.al.realworld.domain.repository.FollowRelationRepository;
 import com.github.al.realworld.domain.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.core.convert.ConversionService;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import java.util.ArrayList;
-import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static com.github.al.realworld.application.exception.BadRequestException.badRequest;
 
@@ -51,28 +42,23 @@ public class GetFeedHandler implements QueryHandler<GetFeedResult, GetFeed> {
 
     private final ArticleRepository articleRepository;
     private final UserRepository userRepository;
-    private final FollowRelationRepository followRelationRepository;
+    private final ConversionService conversionService;
 
     @Transactional(readOnly = true)
     @Override
     public GetFeedResult handle(GetFeed query) {
-        User currentUser = userRepository.findByUsername(query.getCurrentUsername())
+        var currentUser = userRepository.findByUsername(query.getCurrentUsername())
                 .orElseThrow(() -> badRequest("user [name=%s] does not exist", query.getCurrentUsername()));
 
-        List<FollowRelation> relations = followRelationRepository.findByFollowerId(currentUser.getId());
+        var articles = articleRepository.findAllAssemblyByFollowerId(currentUser.id(), query.getLimit(), query.getOffset());
 
-        List<UUID> followeesUsernames = relations.stream()
-                .map(followRelation -> followRelation.getFollowee().getId())
-                .collect(Collectors.toList());
+        var results = articles.stream()
+                .map(article -> conversionService.convert(article, ArticleDto.class))
+                .toList();
 
-        List<Article> articles = articleRepository
-                .findByFollowees(followeesUsernames, query.getLimit(), query.getOffset());
+        var count = articleRepository.countFeed(currentUser.id());
 
-        ArrayList<ArticleDto> results = new ArrayList<>();
-
-        articles.forEach(article -> results.add(ArticleAssembler.assemble(article, currentUser)));
-
-        return new GetFeedResult(results, results.size());
+        return new GetFeedResult(results, count);
     }
 
 }
